<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_parametres"
            android:icon="@drawable/ic_add_element"
            android:title="@string/parametre_de_compte" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_historique"
            android:icon="@drawable/ic_add_element"
            android:title="@string/historique" />
    </group>

    <group android:id="@+id/grp3" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_add_element"
            android:title="@string/chat" />
    </group>

    <group android:id="@+id/grp4" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_deconnexion"
            android:icon="@drawable/ic_add_element"
            android:title="@string/deconnexion" />
    </group>

</menu>