<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cresu.projectr.activities.ConnexionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_simple"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_block">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/input_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_id"
                        android:inputType="text"
                        android:drawableRight="@mipmap/ic_person" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_password"
                        android:inputType="textPassword"
                        android:drawableRight="@mipmap/ic_security" />

                </android.support.design.widget.TextInputLayout>

                <Button android:id="@+id/btn_connexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_connexion"
                    android:textColor="#FFF"
                    android:background="@drawable/button_background" />

                <Button android:id="@+id/btn_inscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_inscription"
                    android:textColor="#FFF"
                    android:layout_marginTop="@dimen/margin_simple"
                    android:background="@drawable/button_background" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
