<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.cresu.projectr.activities.ParametresActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/background_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="top"
            android:minHeight="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleMarginTop="15dp" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical">

            <!-- android:padding="@dimen/padding_block"
            android:layout_margin="@dimen/margin_simple" -->

            <!-- <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/carte_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Carte :" />

                    <com.wajahatkarim3.easyflipview.EasyFlipView
                        android:layout_width="300dp"
                        android:layout_height="180dp"
                        android:layout_below="@id/carte_txt"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        app:flipOnTouch="true"
                        app:flipDuration="500"
                        app:flipEnabled="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/brodure_simple_bleue"
                            android:gravity="center" >

                            <ImageView
                                android:id="@+id/qr_image"
                                android:layout_width="100dp"
                                android:layout_height="100dp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/blue_gradient_ui"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/identifiant_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="40dp"
                                android:text="00   00   00   00   00"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="25dp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_below="@id/identifiant_txt"
                                android:layout_marginLeft="@dimen/text_size_14"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Pseudo :"
                                    android:textColor="@android:color/white"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/pseudo_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Mon Pseudo"
                                    android:textColor="@android:color/white"
                                    android:textStyle="" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_below="@id/identifiant_txt"
                                android:layout_marginRight="20dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Solde :"
                                    android:textColor="@android:color/white"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/solde_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Mon Solde"
                                    android:textColor="@android:color/white"
                                    android:textStyle="" />

                            </LinearLayout>


                        </RelativeLayout>

                    </com.wajahatkarim3.easyflipview.EasyFlipView>



                </RelativeLayout>

            </android.support.v7.widget.CardView> -->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_pseudo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:id="@+id/input_pseudo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_pseudo"
                            android:drawableRight="@mipmap/ic_person" />

                    </android.support.design.widget.TextInputLayout>

                    <!-- <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_password"
                            android:inputType="textPassword"
                            android:drawableRight="@mipmap/ic_security" />

                    </android.support.design.widget.TextInputLayout> -->

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:id="@+id/input_telephone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_telephone"
                            android:inputType="phone"
                            android:drawableRight="@mipmap/ic_phone" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_paiement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:id="@+id/input_paiement"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_paiement"
                            android:inputType="phone"
                            android:drawableRight="@mipmap/ic_phone" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_pays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:id="@+id/input_pays"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_pays"
                            android:inputType="text"
                            android:drawableRight="@mipmap/ic_localisation" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_ville"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:id="@+id/input_ville"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_ville"
                            android:inputType="text"
                            android:drawableRight="@mipmap/ic_localisation" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_quartier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <EditText
                            android:id="@+id/input_quartier"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_quartier"
                            android:inputType="text"
                            android:drawableRight="@mipmap/ic_localisation" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btn_valider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_valider"
                        android:textColor="@android:color/white"
                        android:background="@drawable/button_background"
                        android:layout_marginBottom="@dimen/text_size_14"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

             <!-- <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_sexe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_simple"
                android:layout_marginTop="@dimen/margin_simple">

                <Spinner
                    android:id="@+id/input_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_gender" />

            </android.support.design.widget.TextInputLayout> -->

        </LinearLayout>
    </ScrollView>

</LinearLayout>
